overflow issue

--- a/sass/styles/styles.scss
+++ b/sass/styles/styles.scss
@@ -69,7 +69,7 @@ a {
 @media (max-width: 600px) {
   .intro {
     padding: 0 30px;
-    overflow: hidden;
+    // overflow: hidden;
   }
 
   p {
